--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,17 +1,16 @@
 .body__index {
-    height: 100vh;
     padding: 2em;
-
+    position:absolute;
     main {
-        position: relative;
+        height: 100vh;
+        position:relative;
         border-radius: 10px;
         overflow: hidden;
         width: 100%;
         height: 100%;
 
-        
-
         .boton_portafolio {
+            
             position: absolute;
             bottom: -4px;
             right: -1px;
@@ -63,8 +62,9 @@
         }
 
         .capa_blur {
-            background: #5353532d;
-            backdrop-filter: blur(30.5px);
+            height: 100vh;
+            background: #53535348;
+            backdrop-filter: blur(25.5px);
             position: absolute;
             width: 100%;
             height: 100%;
@@ -86,13 +86,11 @@
 
         }
 
-
-
         /* #####################   CONTENIDO ############################# */
         .titulo__index {
             display: flex;
             padding-left: 5px;
-            margin: 1rem 5rem 1rem 5rem;
+            margin: 1rem 5rem 5rem 5rem;
             flex-direction: column;
             gap: 5em;
             justify-content: space-between;
@@ -131,12 +129,12 @@
                 .titulo {
 
                     justify-content: center;
-                    color: #FFF;
+                    color: #ffffff;
                     font-family: Sora;
-                    font-size: calc(3em + 1vw);
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: 136%;
+                    font-size: calc(2.5em + 1vw);
+                    font-style: light;
+                    font-weight: 200;
+                    line-height: 186%;
 
                     img {
                         width: 75px;
@@ -146,6 +144,7 @@
                 }
 
                 .contens_chips {
+                    visibility: hidden;
                     padding-left: 5px;
                     display: grid;
                     column-gap: 10px;
@@ -181,7 +180,8 @@
 
             .cont_titulo_dos {
                 padding-left: 5px;
-                margin-right: 50%;
+                display: flex;
+                flex-direction: row;
 
                 p {
                     color: #FDFDFF;
@@ -194,6 +194,11 @@
                     letter-spacing: 0.65px;
                     text-transform: capitalize;
                 }
+                .cont_falso_boton{
+                    background: rgba(0, 0, 0, 0);
+                    width: 100%;
+                    height: auto;
+                }
             }
 
 
@@ -205,7 +210,7 @@
 
 @media (max-width: 1000px) {
     .body__index {
-        height: 100vh;
+        
         padding: 1em;
 
         .cursor {
@@ -213,6 +218,7 @@
         }
 
         main {
+            height: 100vh;
             position: relative;
             border-radius: 10px;
             overflow: hidden;
@@ -294,11 +300,12 @@
                 z-index: -10;
 
             }
+
             /* #####################   CONTENIDO ############################# */
             .titulo__index {
                 display: flex;
                 padding-left: 5px;
-                margin: 1rem 1rem 1rem 1rem;
+                margin: 1rem 1rem 5rem 1rem;
                 flex-direction: column;
                 justify-content: space-between;
                 border-left: 1px solid #FFF;
@@ -413,15 +420,14 @@
 
 @media (max-width: 500px) {
     .body__index {
-        height: 100vh;
         padding: 1em;
-
+        position:absolute;
         .cursor {
             display: none;
         }
 
         main {
-            position: relative;
+            height: 100vh;
             border-radius: 10px;
             overflow: hidden;
             width: 100%;
@@ -483,6 +489,7 @@
             }
 
             .capa_blur {
+                height: 100vh;
                 background: #5353532d;
                 backdrop-filter: blur(30.5px);
                 position: absolute;
@@ -496,6 +503,7 @@
             }
 
             video {
+                height: 100vh;
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -524,10 +532,9 @@
 
             /* #####################   CONTENIDO ############################# */
             .titulo__index {
-                height: auto;
                 display: flex;
                 padding-left: 5px;
-                margin: 1rem 1rem 1rem 1rem;
+                margin: 1rem 1rem 50% 1rem;
                 flex-direction: column;
                 gap: 1em;
                 justify-content: space-between;
