--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -408,6 +408,7 @@ p {
 
 /* ################# NUEVO MENU ############## */
 .conte__menu {
+    padding-bottom: 1em;
 
     .header__index {
         display: flex;
@@ -468,7 +469,7 @@ p {
     }
 
     .contendor_activo_de_menu {
-        padding: 5rem 9rem 3rem 9rem;
+        padding: 4rem 9rem 3rem 9rem;
         right: -20em;
         top: 0px;
         width: 0vw;
@@ -510,7 +511,7 @@ p {
                     align-items: center;
                     justify-content: start;
                     overflow: hidden;
-                    
+
                     .flachamenu {
 
                         width: 0%;
@@ -522,7 +523,7 @@ p {
                         transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.0);
                     }
 
-                    a { 
+                    a {
                         transition: all 900ms;
                         transition-delay: 0.3s;
                         transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.0);
@@ -651,7 +652,7 @@ p {
 
     .contendor_activo_de_menu_op {
 
-        padding: 5rem 4rem 3rem 9rem;
+        padding: 4rem 4rem 3rem 9rem;
         right: 0px;
         top: 0px;
         width: 100vw;
@@ -659,6 +660,7 @@ p {
         position: absolute;
         z-index: 9;
         background: #ffffff;
+
         .list_menu {
             width: 100%;
             display: flex;
@@ -688,6 +690,7 @@ p {
                     align-items: center;
                     justify-content: start;
                     overflow: hidden;
+
                     .flachamenu {
 
                         width: 0%;
@@ -699,7 +702,7 @@ p {
                         transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.0);
                     }
 
-                    a { 
+                    a {
                         transform: translateY(1%);
                         width: 100%;
                         padding: 5px 0px;
@@ -1655,5 +1658,196 @@ p {
 .Words:hover {
     .tex_animado {
         transform: translate3d(0, -($clip-height), 0);
+    }
+}
+
+
+
+
+
+.slider_uno {
+    position:fixed;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    height: 250px;
+    margin: auto;
+    overflow: hidden;
+    width: 100VW;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    transform: rotate(0deg);
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-shrink: 0;
+
+    .slide-track {
+        -webkit-animation: scroll 30s linear infinite;
+        animation: scroll 30s linear infinite;
+        display: flex;
+        width: 3200px;
+        gap: 10px;
+        border: 1px solid #000;
+        background: #FFF;
+        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
+
+        .slide {
+            height: 70px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+
+
+            p {
+                color: #000;
+                font-family: Poppins;
+                font-size: 50px;
+                font-style: normal;
+                text-align: start;
+                font-weight: 400;
+                line-height: normal;
+                white-space: nowrap;
+            }
+        }
+    }
+
+    .slide-track-contra {
+        -webkit-animation: scrollcontra 30s linear infinite;
+        animation: scrollcontra 30s linear infinite;
+        display: flex;
+        width: 3200px;
+        gap: 10px;
+        border: 1px solid #000;
+        background: #FFF;
+        box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
+
+
+        .slide {
+            height: 70px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            transform: rotate(180deg);
+
+
+            p {
+                color: #000;
+                font-family: Poppins;
+                font-size: 50px;
+                font-style: normal;
+                text-align: start;
+                font-weight: 400;
+                line-height: normal;
+                white-space: nowrap;
+            }
+        }
+    }
+}
+
+.slider_dos {
+    position:fixed;
+    z-index: 1;
+    bottom: 0;
+    top: 0;
+    left: 0px;
+    margin: auto;
+    overflow: hidden;
+    width: 100Vw;
+    display: flex;
+    align-items: center;
+    height: 100vw;
+    transform: rotate(90deg);
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-shrink: 0;
+    .slide-track {
+        -webkit-animation: scroll 30s linear infinite;
+        animation: scroll 30s linear infinite;
+        display: flex;
+        width: 3200px;
+        gap: 10px;
+        border: 1px solid #000;
+        background: #FFF;
+        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
+
+        .slide {
+            height: 100%;
+            width: 100vh;
+            display: flex;
+            align-items: center;
+
+
+            p {
+                color: #000;
+                font-family: Poppins;
+                font-size: 50px;
+                font-style: normal;
+                text-align: start;
+                font-weight: 400;
+                line-height: normal;
+                white-space: nowrap;
+            }
+        }
+    }
+
+    .slide-track-contra {
+        -webkit-animation: scrollcontra 30s linear infinite;
+        animation: scrollcontra 30s linear infinite;
+        display: flex;
+        width: 3200px;
+        gap: 10px;
+        align-items: end;
+        border: 1px solid #000;
+        background: #FFF;
+        box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
+
+
+        .slide {
+            height: 70px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            transform: rotate(180deg);
+
+
+            p {
+                color: #000;
+                font-family: Poppins;
+                font-size: 50px;
+                font-style: normal;
+                text-align: start;
+                font-weight: 400;
+                line-height: normal;
+                white-space: nowrap;
+            }
+        }
+    }
+}
+
+
+@keyframes scroll {
+    0% {
+        -webkit-transform: translateX(0)scale(1)rotate(-2deg);
+        transform: translateX(0)scale(1)rotate(-2deg);
+    }
+
+    100% {
+        -webkit-transform: translateX(calc(-606px * 3))scale(1.3)rotate(3deg);
+        transform: translateX(calc(-606px * 3))scale(1.3)rotate(3deg);
+    }
+}
+
+@keyframes scrollcontra {
+    0% {
+        -webkit-transform: translateX(calc(-606px * 3)) scale(1) rotate(-2deg);
+        transform: translateX(calc(-606px * 3))scale(1) rotate(-2deg);
+    }
+
+    100% {
+        -webkit-transform: translateX(0px)scale(1.3)rotate(3deg);
+        transform: translateX(0px)scale(1.3)rotate(3deg);
     }
 }
