--- a/style/sass.css
+++ b/style/sass.css
@@ -346,6 +346,9 @@ p {
 }
 
 /* ################# NUEVO MENU ############## */
+.conte__menu {
+  padding-bottom: 1em;
+}
 .conte__menu .header__index {
   display: flex;
   margin: 1rem 5rem 1rem 5rem;
@@ -391,7 +394,7 @@ p {
   z-index: 1000;
 }
 .conte__menu .contendor_activo_de_menu {
-  padding: 5rem 9rem 3rem 9rem;
+  padding: 4rem 9rem 3rem 9rem;
   right: -20em;
   top: 0px;
   width: 0vw;
@@ -541,7 +544,7 @@ p {
   border-bottom: 0.5px solid #000;
 }
 .conte__menu .contendor_activo_de_menu_op {
-  padding: 5rem 4rem 3rem 9rem;
+  padding: 4rem 4rem 3rem 9rem;
   right: 0px;
   top: 0px;
   width: 100vw;
@@ -1377,6 +1380,163 @@ p {
   transform: translate3d(0, -50px, 0);
 }
 
+.slider_uno {
+  position: fixed;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  height: 250px;
+  margin: auto;
+  overflow: hidden;
+  width: 100VW;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  transform: rotate(0deg);
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+.slider_uno .slide-track {
+  animation: scroll 30s linear infinite;
+  display: flex;
+  width: 3200px;
+  gap: 10px;
+  border: 1px solid #000;
+  background: #FFF;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
+}
+.slider_uno .slide-track .slide {
+  height: 70px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.slider_uno .slide-track .slide p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 50px;
+  font-style: normal;
+  text-align: start;
+  font-weight: 400;
+  line-height: normal;
+  white-space: nowrap;
+}
+.slider_uno .slide-track-contra {
+  animation: scrollcontra 30s linear infinite;
+  display: flex;
+  width: 3200px;
+  gap: 10px;
+  border: 1px solid #000;
+  background: #FFF;
+  box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
+}
+.slider_uno .slide-track-contra .slide {
+  height: 70px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  transform: rotate(180deg);
+}
+.slider_uno .slide-track-contra .slide p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 50px;
+  font-style: normal;
+  text-align: start;
+  font-weight: 400;
+  line-height: normal;
+  white-space: nowrap;
+}
+
+.slider_dos {
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
+  top: 0;
+  left: 0px;
+  margin: auto;
+  overflow: hidden;
+  width: 100Vw;
+  display: flex;
+  align-items: center;
+  height: 100vw;
+  transform: rotate(90deg);
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+.slider_dos .slide-track {
+  animation: scroll 30s linear infinite;
+  display: flex;
+  width: 3200px;
+  gap: 10px;
+  border: 1px solid #000;
+  background: #FFF;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.123);
+}
+.slider_dos .slide-track .slide {
+  height: 100%;
+  width: 100vh;
+  display: flex;
+  align-items: center;
+}
+.slider_dos .slide-track .slide p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 50px;
+  font-style: normal;
+  text-align: start;
+  font-weight: 400;
+  line-height: normal;
+  white-space: nowrap;
+}
+.slider_dos .slide-track-contra {
+  animation: scrollcontra 30s linear infinite;
+  display: flex;
+  width: 3200px;
+  gap: 10px;
+  align-items: end;
+  border: 1px solid #000;
+  background: #FFF;
+  box-shadow: 0px -5px 10px 2px rgba(0, 0, 0, 0.123);
+}
+.slider_dos .slide-track-contra .slide {
+  height: 70px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  transform: rotate(180deg);
+}
+.slider_dos .slide-track-contra .slide p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 50px;
+  font-style: normal;
+  text-align: start;
+  font-weight: 400;
+  line-height: normal;
+  white-space: nowrap;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0) scale(1) rotate(-2deg);
+  }
+  100% {
+    transform: translateX(-1818px) scale(1.3) rotate(3deg);
+  }
+}
+@keyframes scrollcontra {
+  0% {
+    transform: translateX(-1818px) scale(1) rotate(-2deg);
+  }
+  100% {
+    transform: translateX(0px) scale(1.3) rotate(3deg);
+  }
+}
 .body__home {
   background: #ffffff;
 }
@@ -4581,10 +4741,11 @@ body {
   }
 }
 .body__index {
-  height: 100vh;
   padding: 2em;
+  position: absolute;
 }
 .body__index main {
+  height: 100vh;
   position: relative;
   border-radius: 10px;
   overflow: hidden;
@@ -4634,9 +4795,10 @@ body {
   }
 }
 .body__index main .capa_blur {
-  background: rgba(83, 83, 83, 0.1764705882);
-  -webkit-backdrop-filter: blur(30.5px);
-          backdrop-filter: blur(30.5px);
+  height: 100vh;
+  background: rgba(83, 83, 83, 0.2823529412);
+  -webkit-backdrop-filter: blur(25.5px);
+          backdrop-filter: blur(25.5px);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -4660,7 +4822,7 @@ body {
 .body__index main .titulo__index {
   display: flex;
   padding-left: 5px;
-  margin: 1rem 5rem 1rem 5rem;
+  margin: 1rem 5rem 5rem 5rem;
   flex-direction: column;
   gap: 5em;
   justify-content: space-between;
@@ -4694,12 +4856,12 @@ body {
 }
 .body__index main .titulo__index .cont_titulo_uno .titulo {
   justify-content: center;
-  color: #FFF;
+  color: #ffffff;
   font-family: Sora;
-  font-size: calc(3em + 1vw);
-  font-style: normal;
-  font-weight: 700;
-  line-height: 136%;
+  font-size: calc(2.5em + 1vw);
+  font-style: light;
+  font-weight: 200;
+  line-height: 186%;
 }
 .body__index main .titulo__index .cont_titulo_uno .titulo img {
   width: 75px;
@@ -4707,6 +4869,7 @@ body {
   flex-shrink: 0;
 }
 .body__index main .titulo__index .cont_titulo_uno .contens_chips {
+  visibility: hidden;
   padding-left: 5px;
   display: grid;
   -moz-column-gap: 10px;
@@ -4739,7 +4902,8 @@ body {
 }
 .body__index main .titulo__index .cont_titulo_dos {
   padding-left: 5px;
-  margin-right: 50%;
+  display: flex;
+  flex-direction: row;
 }
 .body__index main .titulo__index .cont_titulo_dos p {
   color: #FDFDFF;
@@ -4752,16 +4916,21 @@ body {
   letter-spacing: 0.65px;
   text-transform: capitalize;
 }
+.body__index main .titulo__index .cont_titulo_dos .cont_falso_boton {
+  background: rgba(0, 0, 0, 0);
+  width: 100%;
+  height: auto;
+}
 
 @media (max-width: 1000px) {
   .body__index {
-    height: 100vh;
     padding: 1em;
   }
   .body__index .cursor {
     display: none;
   }
   .body__index main {
+    height: 100vh;
     position: relative;
     border-radius: 10px;
     overflow: hidden;
@@ -4838,7 +5007,7 @@ body {
   .body__index main .titulo__index {
     display: flex;
     padding-left: 5px;
-    margin: 1rem 1rem 1rem 1rem;
+    margin: 1rem 1rem 5rem 1rem;
     flex-direction: column;
     justify-content: space-between;
     border-left: 1px solid #FFF;
@@ -4933,14 +5102,14 @@ body {
 }
 @media (max-width: 500px) {
   .body__index {
-    height: 100vh;
     padding: 1em;
+    position: absolute;
   }
   .body__index .cursor {
     display: none;
   }
   .body__index main {
-    position: relative;
+    height: 100vh;
     border-radius: 10px;
     overflow: hidden;
     width: 100%;
@@ -4992,6 +5161,7 @@ body {
     }
   }
   .body__index main .capa_blur {
+    height: 100vh;
     background: rgba(83, 83, 83, 0.1764705882);
     -webkit-backdrop-filter: blur(30.5px);
             backdrop-filter: blur(30.5px);
@@ -5006,6 +5176,7 @@ body {
     overflow: hidden;
   }
   .body__index main video {
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -5026,10 +5197,9 @@ body {
     z-index: 1000;
   }
   .body__index main .titulo__index {
-    height: auto;
     display: flex;
     padding-left: 5px;
-    margin: 1rem 1rem 1rem 1rem;
+    margin: 1rem 1rem 50% 1rem;
     flex-direction: column;
     gap: 1em;
     justify-content: space-between;
